--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^2.21.37",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.5",
+    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-manifest": "^2.4.8",
     "gatsby-plugin-playground": "^1.0.6",
     "gatsby-plugin-react-css-modules": "^2.3.2",
